--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                           </div>
                           <div class="smenu">
                             <div class="stext">
-                              <a href="https://www.kuleiman.com/123860/index.html" target="_self" one-link-mark="yes">维阿校园</a>
+                              <a href="https://www.kuleiman.com/123860/index.html" target="_self" one-link-mark="yes">VR校园</a>
                             </div>
                           </div>
                         </div>
